public/style.css
/* =========== MAIN =========== */
:root {
    --bg: #181926;
    --text: #cad3f5;
    --subtext1: #949cbb;
    --subtext2: #838ba7;
    --subtext3: #737994;
    
    --dgray: #363a4f;
    --gray: #6c7086;
    
    --yellow: #eed49f;
    --orange: #ef9f76;
    --green: #a6da95;
    --red: #ed8796;
}

* {
    padding: 0;
    margin: 0;

    font-family: "Roboto", sans-serif;
}

body {
    background-color: var(--bg);
    padding: 1rem;
}

/*   common tags   */
h1, h2, h3, h4, h5, h6 { color: var(--text); }
h2, h3, h4, h5, h6 { padding-top: 0.75rem; }
p, label { color: var(--subtext1); }
a:hover { color: var(--subtext2); }
a, a:visited {
    color: var(--subtext1);
    text-decoration: none;
    width: fit-content;
}

.colorText { color: var(--text) }
.colorText:visited { color: var(--text) }

/*   flex   */
.flex-col {
    display: flex;
    flex-direction: column;
    gap: 0.25rem
}

.flex-row {
    display: flex;
    flex-direction: row;
    gap: 0.25rem
}

/* =========== COLORS =========== */
.c-red { color: var(--red) }
.c-green { color: var(--green) }
.c-gray { color: var(--gray) }
.c-dgray { color: var(--dgray) }
.c-orange { color: var(--orange) }
.c-yellow { color: var(--yellow) }

/* =========== HEADER =========== */
.header {
    font-size: 0.8rem;
    padding-bottom: 2rem;
    top: 1rem;

    color: var(--subtext3);
}

.header .right, .header .left {
    position: absolute;
}

.header .left {
    left: 1rem;
}

.header .right {
    right: 1rem;
}

/* =========== MAIN =========== */
.main {
    padding-bottom: 2rem;
}

/* =========== TABLE =========== */
table {
    border-collapse: collapse;
    width: 40rem;
}

table, th, td {
    color: var(--text);
    border: 1px solid var(--dgray);
}

th, td {
    padding: 6px;
}

tr:not(:first-child) th {
    color: var(--gray);
    font-weight: 400;
}

/* =========== FORMS =========== */
form input, select {
    font-size: 0.9remc;
    background-color: var(--dgray);
    border: none;
    border-radius: 0.15rem;
    color: var(--text);
    padding: 0.25rem;
}

form, select{
    margin-right: 1rem;
    width: 15rem;
}

.lesson-cell {
    padding: 0.25rem;
    border-radius: 0.25rem;
    min-height: 20px;
}

/* =========== DOWNLOAD BUTTON =========== */

.downloadContainer {
    margin-top: auto;
    margin-bottom: auto;
}

#downloadBtn {
    background-color: var(--dgray);
    color: var(--text);
    border: none;
    border-radius: 0.25rem;
    padding: 0.5rem 1rem;
    cursor: pointer;
}

@media screen and (max-aspect-ratio: 4/3) {
    form {
        width: 100%;
    }

    table {
        width: 100%;
    }
}

@media (max-width: 700px) {
    #tableContainer table {
        border-collapse: collapse;
        border-color: transparent;
    }

    #tableContainer table thead {
        display: none;
    }

    #tableContainer table tbody tr {
        margin-top: 1rem;
        margin-bottom: 1rem;
        display: flex;
        flex-direction: column;
    }

    #tableContainer table td {
        display: flex;
    }

    #tableContainer table td.day {
        font-weight: bold;
    }

    .lesson-cell {
        width: 100%;
    }
}

